<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.Registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_light"
            android:background="@color/colorgreenlight"
            android:hint="@string/mobile"
            app:startIconTint="#00C853">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regi_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/balo_regular"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_light"
            android:background="@color/colorgreenlight"
            android:hint="@string/name"
         >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regi_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/balo_regular"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
           android:id="@+id/til_hc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorgreenlight"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/housecode"
            app:startIconTint="#00C853">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regi_housecode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/balo_regular"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorgreenlight"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/pincode"
            app:startIconTint="#00C853">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regi_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/balo_regular"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:background="@color/colorgreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/balo_regular"
                android:textSize="16sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="আমার অ্যাকাউন্ট আছে"
                android:textColor="@color/white"
                />
            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@color/white"/>
            <TextView
                android:id="@+id/goto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/balo_regular"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="লগইন করি"
                android:textColor="@color/white"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checktrmcondi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorgreen"
                android:checked="false"
                android:fontFamily="@font/balo_regular"
                android:text="I agree to the"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/balo_bold"
                android:text="Terms and Services"
                android:textColor="@color/maincolor"
                android:textSize="12sp"
               android:textColorLink="@color/maincolor"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/balo_regular"
                android:text="and"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/balo_bold"
                android:text="Privacy Policies"
                android:textColor="@color/maincolor"
                android:textSize="12sp" />
        </LinearLayout>
    <Button
        android:id="@+id/regi_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:text="@string/submit"
        android:fontFamily="@font/balo_bold"

        />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>