<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">
    <TextView
        android:id="@+id/tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/balo_bold"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="2dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="লগইন করুন"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_light"
            android:background="@color/maincolorlight"
            android:hint="@string/mobile"
           app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/balo_regular"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/pincode"
           >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regi_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/balo_regular"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp">
       <!--     <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/balo_regular"
                android:textSize="16sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="আমার অ্যাকাউন্ট আছে"
                android:textColor="@color/white"
                />
            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@color/white"/>-->
            <TextView
                android:id="@+id/goto_regi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/balo_regular"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="রেজিস্ট্রেশন এ যাই"
                android:textColor="@color/maincolor"
                />

        </LinearLayout>
        <Button
            android:id="@+id/login_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:text="@string/submit"
            android:fontFamily="@font/balo_bold"

            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>